feat : 파티 정렬 항상 거리순으로 수정 + 동네 기준으로 파티 조회 (#122)